--- a/NetPriveleges.uplugin
+++ b/NetPriveleges.uplugin
@@ -17,7 +17,7 @@
 	"Modules": [
 		{
 			"Name": "NetPriveleges",
-			"Type": "Editor",
+			"Type": "Runtime",
 			"LoadingPhase": "Default"
 		}
 	]
