--- a/NetPriveleges.uplugin
+++ b/NetPriveleges.uplugin
@@ -3,16 +3,15 @@
 	"Version": 1,
 	"VersionName": "1.0",
 	"FriendlyName": "Network Priveleges",
-	"Description": "sample desc",
-	"Category": "Other",
+	"Description": "Role-based authorization for your networked Unreal application.",
+	"Category": "Administration",
 	"CreatedBy": "Ganondev",
-	"CreatedByURL": "https://example.com",
+	"CreatedByURL": "https://github.com/ganondev",
 	"DocsURL": "",
 	"MarketplaceURL": "",
-	"SupportURL": "",
-	"CanContainContent": true,
-	"IsBetaVersion": false,
-	"IsExperimentalVersion": false,
+	"SupportURL": "https://github.com/ganondev",
+	"CanContainContent": false,
+	"IsBetaVersion": true,
 	"Installed": false,
 	"Modules": [
 		{
